--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "helpcrunch/magento2-module",
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0",
+        "php": ">=5.5",
         "magento/module-store": "100.*",
         "magento/module-customer": "100.*",
         "magento/module-config": "100.*",
