--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,11 @@
     "name": "helpcrunch/magento2-module",
     "require": {
         "php": ">=5.5",
-        "magento/module-store": "100.*",
-        "magento/module-customer": "100.*",
-        "magento/module-config": "100.*",
-        "magento/module-backend": "100.*",
-        "magento/framework": "100.*"
+        "magento/module-store": "*",
+        "magento/module-customer": "*",
+        "magento/module-config": "*",
+        "magento/module-backend": "*",
+        "magento/framework": "*"
     },
     "type": "magento2-module",
     "version": "1.0.0",
